# affinescript

./: .gitignore  .governance-allowlist  .hypatia-ignore  .ocamlformat-ignore  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  ALPHA-1-RELEASE-NOTES.md  BACKEND-IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPILER-CAPABILITIES.md  COMPLETE-2026-02-07.md  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  FIXES_2026-01-23.md  GAME-BUNDLING-STRATEGY.md  KNOWN-ISSUES.md  LICENSING-GUIDE.md  META.scm  MODULE-SYSTEM-PROGRESS.md  NAVIGATION.adoc  PHASE3-ASSESSMENT.md  PHASE3-COMPLETE.md  PHASE3-SESSION-SUMMARY.md  README.adoc  README.md  RELEASE.md  REPLY-SUM-TYPES.md  ROADMAP.adoc  ROADMAP.md  RSR_COMPLIANCE.adoc  RSR_OUTLINE.adoc  SESSION-2026-01-23.md  SESSION-COMPLETE.md  STATE.scm  TEST-NEEDS.md  TESTING-REPORT.adoc  TESTING-REPORT.scm  TRAIT_SYSTEM_STATUS.md  (+19 more)
.build/: dune-project  justfile
.claude/: CLAUDE.md  PROJECT.md  settings.json
.github/: dependabot.yml
.machine_read/: LLM_SUPERINTENDENT.scm  SPEC.core.scm
.machine_readable/: AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  LLM_SUPERINTENDENT.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  ROADMAP.f0.scm  SPEC.core.scm  STATE.scm  TRUST.contractile
.well-known/: aibdp.json
affinescript-deno-test/: .gitignore  README.adoc  cli.ts  deno.json  mod.ts
affinescript-dom/: package.json
affinescript-pixijs/: package.json
affinescript-tea/: README.adoc  deno.json  mod.js  mod_test.js
affinescript-vite/: .guix-channel  0-AI-MANIFEST.a2ml  Justfile  README.adoc  ROADMAP.adoc  guix.scm  vite.config.js
affinescriptiser/: .guix-channel  CHANGELOG.adoc  CONTRIBUTING.adoc  Cargo.toml  EXPLAINME.adoc  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  eclexiaiser.toml  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
ai-cli-crash-capture/: README.adoc
audits/: assail-classifications.a2ml
bench/: bench_codegen.ml  bench_fixtures.ml  bench_lex.ml  bench_main.ml  bench_parse.ml  bench_scaling.ml  bench_typecheck.ml  bench_vm.ml  dune
bench/workloads/: lp_tropical.affine  nlp_newton.affine
codemod/: codemod.ml  dune
conformance/: README.md
debugger/: affinescript_debug.ml
docs/: ALIB-INTEGRATION.adoc  ALIB-INTEGRATION.md  CAPABILITY-MATRIX.adoc  ECOSYSTEM.adoc  EFFECTS-IMPLEMENTATION.adoc  EFFECTS-IMPLEMENTATION.md  EXPLAINME.adoc  INTERP-CESK-PORT.adoc  KNOWN-ISSUES.adoc  KNOWN-ISSUES.md  MIGRATION-ASSISTANT.adoc  NAVIGATION.adoc  PACKAGING.adoc  PROOF-NEEDS.adoc  PROOF-NEEDS.md  README.adoc  RESCRIPT-ELIMINATION.adoc  ROADMAP.adoc  SOUNDNESS.adoc  STATE-2026-05-26.adoc  STATE-2026-06-11.adoc  STDLIB-EXTERN-AUDIT.a2ml  STDLIB-EXTERN-AUDIT.adoc  TECH-DEBT.adoc  TESTING-AND-BENCH-MATRIX.adoc  TYPECHECKER-COMPLETION.md  alib-roadmap.adoc  bindings-roadmap.adoc  spec.adoc  spec.md  stdlib-roadmap.adoc  tech-debt-2026-05-26.adoc  tech-debt-2026-05-26.md
examples/: comprehensive_test.affine  comprehensive_test.as  dependent_types.affine  dependent_types.as  enums.afs  exception_test.as  factorial.afs  fibonacci.afs  hello.affine  hello.afs  hello.as  higher_order.afs  ownership.as  records.afs  refinements.affine  rows.affine  simple_test.as  traits.as  typecheck_complete_test.affine  typecheck_complete_test.as  typecheck_features_test.as  vectors.affine  vscode_extension_minimal.affine  wasm-exports-demo.affine
formal/: .gitignore  AffineUsage.v  F1_TransformerPreservation.v  F3_PragmaDecidable.v  F4_ErrorFaithful.v  F5_RenderFaithful.v  K1Let_CodegenPreservation.v  K1_CodegenPreservation.v  P2_Progress.v  P2_Stlc.v  P3_BorrowGraph.v  P3_BorrowSound.v  QttDynamic.v  QttSemiring.v  QttTyping.v  README.adoc  REAL-LIFT.adoc  RealCompile.v  RealLoop.v  RealMem.v  RealWasm.v  Rows.v  Siblings_Stated.v  _CoqProject  justfile
issues-drafts/: 01-float-arithmetic-operators-not-typeable.md  02-array-type-syntax-not-parseable-in-user-source.md  03-effect-handling-migration-story.md  04-extern-declarations-not-parseable.md  05-float-through-heap-cell-model-invalid-wasm.md  06-ownership-carrier-has-no-affine-kind.md  07-superlinear-compile-scaling.md  08-conditional-origin-borrow-escape.md  09-round3-borrow-affine-soundness-probe.md
js/: dune  js_api.ml  playground.ml
lib/: ast.ml  backends.ml  bash_codegen.ml  borrow.ml  borrow_extract.ml  c_codegen.ml  cafe_face.ml  codegen.ml  codegen_deno.ml  codegen_gc.ml  codegen_node.ml  codemod_hook.ml  constraint.ml  cuda_codegen.ml  dependent.ml  desugar_traits.ml  dune  effect.ml  effect.mli  effect_sites.ml  effects.ml  error.ml  error_collector.ml  error_formatter.ml  error_formatter.mli  eval.ml  face.ml  face_pragma.ml  faust_codegen.ml  formatter.ml  formatter.mli.disabled  gleam_codegen.ml  int_div_classifier.ml  interp.ml  js_codegen.ml  js_face.ml  json_output.ml  julia_codegen.ml  kernel_sublang.ml  lean_codegen.ml  (+57 more)
lib/backends/: architecture.ml  audio_kernel.ml  gpu_backend.ml  native_backend.ml  wasm_backend.ml
lib/borrow_polonius/: dune  solve.ml  types.ml
lsp/: affinescript_lsp.ml
pkg/: Project.toml
proposals/: DESIGN-string-concat.adoc  EVIDENCE-float-wall-finding.adoc  EVIDENCE-float-wall-implementation.adoc  EVIDENCE-session-2026-06-14-overview.adoc  EVIDENCE-stringwall-slice1.adoc  EVIDENCE-stringwall-slice2.adoc  EVIDENCE-stringwall-slice3.adoc  EVIDENCE-stringwall-slice4.adoc  EVIDENCE-stringwall-slice5.adoc  EVIDENCE-stringwall-slice6.adoc  EVIDENCE-stringwall-slice7.adoc  EVIDENCE-stringwall-slices9-10.adoc  MIGRATION-PLAN.adoc  README.adoc
runtime/: Cargo.toml
spec/: ARG-PROFILE.adoc  CRG-PROFILE.adoc  FRG-PROFILE.adoc  TRG-PROFILE.adoc
stdlib/: Aggregate.affine  Ajv.affine  AlibSchema.affine  Canvas.affine  Core.affine  Core.as  Crypto.affine  Deno.affine  Grammy.affine  Http.affine  Ipc.affine  Math.as  Motion.affine  Network.affine  Option.as  Pixi.affine  PixiSound.affine  PixiUI.affine  README.md  Result.as  SafeHex.affine  Sqlite.affine  Transaction.affine  Vscode.affine  Websocket.affine  io.as  (+24 more)
(+1106 files in other folders)
