(library
 (name affinescript)
 (public_name affinescript)
 (modes byte native)
 (modules ast borrow c_codegen cafe_face codegen codegen_gc desugar_traits effect error error_collector error_formatter face face_pragma formatter interp js_codegen js_face julia_codegen json_output lexer linter lsp_server lucid_face module_loader opt parse_driver parse parser parser_errors pseudocode_face python_face quantity resolve span symbol tea_bridge tea_cs_bridge tea_router token trait tw_interface tw_verify typecheck types unify value wasm wasm_encode wasm_gc wasm_gc_encode wasi_runtime wgsl_codegen)
 (libraries str unix sedlex fmt menhirLib yojson)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord sedlex.ppx)))

(menhir
 (modules parser)
 (flags --table))
