(library
 (name affinescript)
 (public_name affinescript)
 (modes byte native)
 (modules
  ast
  borrow
  c_codegen
  cafe_face
  codegen
  codegen_deno
  codegen_gc
  codegen_node
  desugar_traits
  effect
  error
  error_collector
  error_formatter
  face
  face_pragma
  formatter
  bash_codegen
  cuda_codegen
  faust_codegen
  gleam_codegen
  interp
  js_codegen
  js_face
  julia_codegen
  json_output
  kernel_sublang
  lean_codegen
  llvm_codegen
  lua_codegen
  metal_codegen
  mlir_codegen
  nickel_codegen
  ocaml_codegen
  onnx_codegen
  onnx_proto
  opencl_codegen
  protobuf
  rescript_codegen
  rust_codegen
  spirv_codegen
  verilog_codegen
  why3_codegen
  lexer
  linter
  lsp_server
  lucid_face
  module_loader
  opt
  parse_driver
  parse
  parser
  parser_errors
  pseudocode_face
  python_face
  quantity
  resolve
  span
  symbol
  tea_bridge
  tea_cs_bridge
  tea_router
  token
  trait
  tw_interface
  tw_verify
  typecheck
  types
  unify
  value
  wasm
  wasm_encode
  wasm_gc
  wasm_gc_encode
  wasi_runtime
  wgsl_codegen)
 (libraries str unix sedlex fmt menhirLib yojson)
 ; Warnings 8 (partial-match) and 9 (missing-record-fields) are demoted from
 ; error to warning so that adding new AST variants (e.g. FnExtern, TyExtern)
 ; doesn't require updating every backend's match in lock-step. Critical
 ; paths (Codegen WASM, Codegen_gc, Resolve, Typecheck, Borrow, Quantity)
 ; still handle the new variants explicitly; non-WASM codegens that don't
 ; will surface a Match_failure with file:line at runtime if exercised on an
 ; extern decl, which is the right signal for "this target has no story for
 ; host-supplied implementations".
 (flags
  (:standard -w -8-9))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord sedlex.ppx)))

(menhir
 (modules parser)
 (flags --table))
